RESOLVED FIXED129662
Don't synchronize attributes in reflect setters when we don't need to
https://bugs.webkit.org/show_bug.cgi?id=129662
Summary Don't synchronize attributes in reflect setters when we don't need to
Ryosuke Niwa
Reported 2014-03-04 00:52:32 PST
We're currently calling setAttribute on every setters generated by "Reflect" keyword in IDL.
Attachments
Fixes the bug (3.91 KB, patch)
2014-03-04 01:07 PST, Ryosuke Niwa
no flags
Radar WebKit Bug Importer
Comment 1 2014-03-04 00:53:05 PST
Ryosuke Niwa
Comment 2 2014-03-04 01:07:04 PST
Created attachment 225748 [details] Fixes the bug
Ryosuke Niwa
Comment 3 2014-03-04 02:43:04 PST
Comment on attachment 225748 [details] Fixes the bug Clearing flags on attachment: 225748 Committed r165046: <http://trac.webkit.org/changeset/165046>
Ryosuke Niwa
Comment 4 2014-03-04 02:43:08 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5 2014-03-04 07:36:49 PST
(In reply to comment #3) > (From update of attachment 225748 [details]) > Clearing flags on attachment: 225748 > > Committed r165046: <http://trac.webkit.org/changeset/165046> It broke the bindings tests. Could you fix them?
Antti Koivisto
Comment 6 2014-03-04 11:07:22 PST
Updated bindings test results in https://trac.webkit.org/r165062
Note You need to log in before you can comment on or make changes to this bug.