Don't synchronize attributes in reflect setters when we don't need to https://bugs.webkit.org/show_bug.cgi?id=129662

Reviewed by Andreas Kling.

The vast majority of attributes don't need synchronization. Avoid calling synchronizeAttribute in setters
for those content attributes generated by "Reflect" keyword in IDL.

* bindings/scripts/CodeGenerator.pm:
(SetterExpression):
* dom/Element.cpp:
(WebCore::Element::setAttributeWithoutSynchronization): Added.
* dom/Element.h:


Canonical link: https://commits.webkit.org/147712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165046 268f45cc-cd09-0410-ab3c-d52691b4dbfc